--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.2.1"
     implementation "io.insert-koin:koin-android:3.2.1"
 
+    def lottieVersion = "6.0.0"
+    implementation "com.airbnb.android:lottie-compose:$lottieVersion"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
